<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding_normal"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_normal"
            android:contentDescription="@string/content_description_login_image"
            android:src="@drawable/icon_movie" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            style="@style/textFields"
            android:hint="@string/login_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingTop="@dimen/padding_normal" />

        <TextView
            android:id="@+id/errorInvalidName"
            style="@style/errors"
            android:text="@string/invalid_name"
            android:visibility="gone" />

        <EditText
            android:id="@+id/editTextTextPassword"
            style="@style/textFields"
            android:hint="@string/login_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingTop="@dimen/padding_normal" />

        <TextView
            android:id="@+id/errorInvalidPassword"
            style="@style/errors"
            android:text="@string/invalid_password"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_normal"
            android:text="@string/sign_in_button_text" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.17" />
</androidx.constraintlayout.widget.ConstraintLayout>