<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:padding="@dimen/padding_normal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_profile_image"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textViewUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/padding_normal"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/font_size_detail_title"
            tools:text="User name"/>
        <Button
            android:id="@+id/buttonAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_normal"
            android:text="@string/about" />
        <Button
            android:id="@+id/buttonSignOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_out" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_spacer_profile" />
    </LinearLayout>

</FrameLayout>